Revision history for Ixchel

0.9.0  2024-02-17/
		 - add in automatic threading and sensor-name capabilities for Suricata

0.8.1  2024-02-14/16:00
		 - don't enable anomaly syslog logging for suricata as it can't use both syslog and the flows file

0.8.0  2024-02-14/12:00
		 - remove .pfring from suricata base
		 - fix typo in suricata_outputs template preenting syslog outputs from working
		 - don't try to install perl modules from cpanm more than once

0.7.0  2024-01-26/15:15
		 - action suricata_base, .netmap and .nflog added to items to remove by default
		 - action lilith_config, add new action for configuring lilith

0.6.3  2024-01-22/23:45
		 - minor fixes for snmp_services

0.6.2  2024-01-22/12:15
		 - fix typo for pkgs

0.6.1  2024-01-22/10:15
		 -  add missing lib/Ixchel/Actions/base.pm to the MANIFEST

0.6.0  2024-01-22/09:45
		 - pkgs action, don't mark end report as errors
		 - snmp_service, add new action
		 - rework the synopsis section for all the actions
		 - add base action for better code reuse

0.5.1   2024-01-19/09:45
		 - Fix typo in MANIFEST sneck_installs -> sneck_install

0.5.0   2024-01-19/09:15
		 - add snmp_install action
		 - add sneck_install install
		 - action pkgs, add in results reporting at the end of the action
		 - now set both lower and upper case proxy values
		 - LWP::Simple replaced with LWP::UserAgent everywhere
		 - action xeno_build, fetch is a bit more verbose as to the results

0.4.0   2024-01-16/17:00
		 - ENV handling for proxy stuff and and cpanm home has moved to Ixchel->action to make handling easier
		 - variables defined under .env are now transfered to %ENV by Ixchel->action
		 - perl action, print results at the end
		 - misc POD fixes
		 - add sneck_config action and sneck template
		 - add some missing tests
		 - fix suricata_diff
		 - suricata include/outputs file name update
		 - fix missing items in the manifest
		 - suricata_extract extend now depends on suricata for snmp_v2 template